--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body {
   z-index: 9999;
 }
 
-/* ==== EPISODE SELECT DROPDOWN ==== */
+/* ==== EPISODE SELECT DROPDOWN and SHOW SELECT CROPDOWN ========*/
+#showSelect,
 #episodeSelect {
   padding: 10px;
   font-size: 16px;
@@ -153,3 +154,5 @@ body {
 .error-message {
   color: #d32f2f;
 }
+
+
